* modified compelled from windows...

--- a/contrib/conf/AuthServer.conf
+++ b/contrib/conf/AuthServer.conf
@@ -3,8 +3,7 @@
 #########################################################################################################
 # AuthDatabase Section
 #
-#    These directives are the location of the `realms` and `accounts`
-#    tables.
+#    These directives are the location of the `realms` and `accounts` tables.
 #
 #    AuthDatabase.Host      - The hostname that the database is located on
 #    AuthDatabase.Username  - The username used for the mysql connection
@@ -107,5 +106,5 @@
 
 <LogonServer RemotePassword = "arctic_change_me_logon"
        AllowedIPs = "127.0.0.0/24"
-	   AllowedModIPs = "127.0.0.0/24"
-	   UseEncryptedPasswords = "0">
+       AllowedModIPs = "127.0.0.0/24"
+       UseEncryptedPasswords = "0">
