--- a/win/VC100/WorldServer.vcxproj.filters
+++ b/win/VC100/WorldServer.vcxproj.filters
@@ -757,4 +757,7 @@
       <Filter>PreCompiled</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\libs\icon.ico" />
+  </ItemGroup>
 </Project>
