* Commits arctic-test

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -212,7 +212,6 @@
 
 <Server PlayerLimit = "1000"
         Motd = "Welcome to Server"
-        SendStatsOnJoin = "1"
         EnableBreathing = "1"
         SeperateChatChannels = "1"
         CompressionThreshold = "1000"
@@ -352,15 +351,13 @@
 #   often. Instance/Non-main maps will not be unloaded ever.
 #
 #   Default:
-#      UseMmaps = "0"
 #      MapPath = "maps"
 #      vMapPath = "vmaps"
-#      MMapPath = "mmaps"
-#      UnloadMaps = "1"
+#      UnloadMaps = 1
 #
 #########################################################################################################
 
-<Terrain UseMmaps MapPath = "maps" vMapPath = "vmaps" MMapPath = "mmaps" UnloadMaps = "0">
+<Terrain MapPath = "maps" vMapPath = "vmaps" UnloadMaps = "1">
 
 #########################################################################################################
 # Log Settings
